force-app/main/default/objects/Corretora__c/Corretora__c.object-meta.xml
<CustomObject>
    <label>Corretora</label>
    <nameField>
        <label>Nome da Corretora</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corretoras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>