force-app/main/default/objects/Corretora__c/fields/CelularContato__c.field-meta.xml
<CustomField>
    <fullName>CelularContato__c</fullName>
    <label>Celular do Contato</label>
    <type>Phone</type>
</CustomField>