force-app/main/default/objects/Corretora__c/fields/DataAniversarioContato__c.field-meta.xml
<CustomField>
    <fullName>DataAniversarioContato__c</fullName>
    <label>Data Nascimento Contato</label>
    <type>Date</type>
</CustomField>