force-app/main/default/objects/Corretora__c/fields/DataDeAberturaDaCorretora__c.field-meta.xml
<CustomField>
    <fullName>DataDeAberturaDaCorretora__c</fullName>
    <label>Data de Abertura da Corretora</label>
    <type>Date</type>
</CustomField>