force-app/main/default/objects/Corretora__c/fields/DiaAniversarioContato__c.field-meta.xml
<CustomField>
    <fullName>DiaAniversarioContato__c</fullName>
    <formula>TEXT(DAY(DataAniversarioContato__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia aniversário contato</label>
    <type>Text</type>
</CustomField>