force-app/main/default/objects/Corretora__c/fields/DiaAniversarioCorretora__c.field-meta.xml
<CustomField>
    <fullName>DiaAniversarioCorretora__c</fullName>
    <formula>TEXT(DAY(DataDeAberturaDaCorretora__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia do aniversário corretora</label>
    <type>Text</type>
</CustomField>