force-app/main/default/objects/Corretora__c/fields/DiasFaltantesAniversario__c.field-meta.xml
<CustomField>
    <fullName>DiasFaltantesAniversario__c</fullName>
    <formula>ProximoAniversarioCorretora__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias faltantes para o aniversário</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>