force-app/main/default/objects/Corretora__c/fields/DiasFaltantesAniversarioCtt__c.field-meta.xml
<CustomField>
    <fullName>DiasFaltantesAniversarioCtt__c</fullName>
    <formula>ProximoAniversarioContato__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias faltantes para o aniversário do Ctt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>