force-app/main/default/objects/Corretora__c/fields/EmailContato__c.field-meta.xml
<CustomField>
    <fullName>EmailContato__c</fullName>
    <label>Email do Contato</label>
    <type>Email</type>
</CustomField>