force-app/main/default/objects/Corretora__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>