force-app/main/default/objects/Corretora__c/fields/EnderecoBairro__c.field-meta.xml
<CustomField>
    <fullName>EnderecoBairro__c</fullName>
    <label>Bairro</label>
    <length>55</length>
    <type>Text</type>
</CustomField>