force-app/main/default/objects/Corretora__c/fields/EnderecoCep__c.field-meta.xml
<CustomField>
    <fullName>EnderecoCep__c</fullName>
    <label>CEP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>