force-app/main/default/objects/Corretora__c/fields/EnderecoCidade__c.field-meta.xml
<CustomField>
    <fullName>EnderecoCidade__c</fullName>
    <label>Cidade</label>
    <length>55</length>
    <type>Text</type>
</CustomField>