force-app/main/default/objects/Corretora__c/fields/EnderecoComplemento__c.field-meta.xml
<CustomField>
    <fullName>EnderecoComplemento__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>