force-app/main/default/objects/Corretora__c/fields/EnderecoEstado__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEstado__c</fullName>
    <label>Estado</label>
    <length>25</length>
    <type>Text</type>
</CustomField>