force-app/main/default/objects/Corretora__c/fields/EnderecoLocalizacao__c.field-meta.xml
<CustomField>
    <fullName>EnderecoLocalizacao__c</fullName>
    <label>Localizaçao</label>
    <scale>13</scale>
    <type>Location</type>
</CustomField>