force-app/main/default/objects/Corretora__c/fields/EnderecoNumero__c.field-meta.xml
<CustomField>
    <fullName>EnderecoNumero__c</fullName>
    <label>Número</label>
    <length>55</length>
    <type>Text</type>
</CustomField>