force-app/main/default/objects/Corretora__c/fields/EnderecoPais__c.field-meta.xml
<CustomField>
    <fullName>EnderecoPais__c</fullName>
    <label>País</label>
    <length>25</length>
    <type>Text</type>
</CustomField>