force-app/main/default/objects/Corretora__c/fields/EnderecoRua__c.field-meta.xml
<CustomField>
    <fullName>EnderecoRua__c</fullName>
    <label>Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>