force-app/main/default/objects/Corretora__c/fields/MesAniversarioContato__c.field-meta.xml
<CustomField>
    <fullName>MesAniversarioContato__c</fullName>
    <formula>TEXT(MONTH(DataAniversarioContato__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês aniversário contato</label>
    <type>Text</type>
</CustomField>