force-app/main/default/objects/Corretora__c/fields/MesAniversarioCorretora__c.field-meta.xml
<CustomField>
    <fullName>MesAniversarioCorretora__c</fullName>
    <formula>TEXT(MONTH(DataDeAberturaDaCorretora__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês do aniversário corretora</label>
    <type>Text</type>
</CustomField>