force-app/main/default/objects/Corretora__c/fields/ProximoAniversarioContato__c.field-meta.xml
<CustomField>
    <fullName>ProximoAniversarioContato__c</fullName>
    <formula>DATE(IF(TODAY()&lt;date(year(today()),month(DataAniversarioContato__c),DAY(DataAniversarioContato__c)),YEAR(TODAY()),YEAR(TODAY())+1),month(DataAniversarioContato__c),
DAY(DataAniversarioContato__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próximo aniversário da Contato</label>
    <type>Date</type>
</CustomField>