force-app/main/default/objects/Corretora__c/fields/ProximoAniversarioCorretora__c.field-meta.xml
<CustomField>
    <fullName>ProximoAniversarioCorretora__c</fullName>
    <formula>DATE(IF(TODAY()&lt;date(year(today()),month(DataDeAberturaDaCorretora__c),DAY(DataDeAberturaDaCorretora__c)),YEAR(TODAY()),YEAR(TODAY())+1),month(DataDeAberturaDaCorretora__c),
DAY(DataDeAberturaDaCorretora__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próximo aniversário da Corretora</label>
    <type>Date</type>
</CustomField>