force-app/main/default/objects/Corretora__c/fields/SobrenomeContato__c.field-meta.xml
<CustomField>
    <fullName>SobrenomeContato__c</fullName>
    <label>Sobrenome Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>