force-app/main/default/objects/Corretora__c/fields/TelefoneContato__c.field-meta.xml
<CustomField>
    <fullName>TelefoneContato__c</fullName>
    <label>Telefone do Contato</label>
    <type>Phone</type>
</CustomField>