force-app/main/default/objects/Corretora__c/validationRules/ObrigatoriedadeTelefoneOUCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadeTelefoneOUCelular</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; (ISBLANK(TelefoneContato__c) &amp;&amp; ISBLANK(CelularContato__c)) &amp;&amp; NOT($Permission.Integracao)</errorConditionFormula>
    <errorDisplayField>TelefoneContato__c</errorDisplayField>
    <errorMessage>Telefone ou Celular são obrigatórios!</errorMessage>
</ValidationRule>