force-app/main/default/objects/Corretora__c/validationRules/ValidarCaracteresCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCaracteresCNPJ</fullName>
    <active>true</active>
    <description>Obriga o usuário a preencher os quatorze dígitos do CNPJ.</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; AND(NOT(ISBLANK(CNPJ__c)),NOT(REGEX( CNPJ__c, &quot;^([0-9]{2}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{4}\\-[0-9]{2})|(\\d{14})$&quot;)))</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Por favor, inserir todos os dígitos do CNPJ, sem pontos, traços ou dígitos.</errorMessage>
</ValidationRule>