force-app/main/default/objects/Corretora__c/validationRules/ValidarDataAberturaCorretora.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarDataAberturaCorretora</fullName>
    <active>true</active>
    <description>A data de abertura não pode ser maior que hoje</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; DataDeAberturaDaCorretora__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>DataDeAberturaDaCorretora__c</errorDisplayField>
    <errorMessage>Por favor coloque uma data válida.</errorMessage>
</ValidationRule>