force-app/main/default/objects/Corretora__c/listViews/Corretora1_Corretora.listView-meta.xml
<ListView>
    <fullName>Corretora1_Corretora</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Corretora 1</label>
    <queue>Corretora1</queue>
    <sharedTo>
        <group>GrupoCorretora1</group>
    </sharedTo>
</ListView>