force-app/main/default/objects/Corretora__c/listViews/Corretora2_Corretora.listView-meta.xml
<ListView>
    <fullName>Corretora2_Corretora</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Corretora 2</label>
    <queue>Corretora2</queue>
    <sharedTo>
        <group>GrupoCorretora2</group>
    </sharedTo>
</ListView>